[package]
name = "markdown-live-preview"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.8"
notify = "4.0.12"
structopt = "0.3.16"
crossbeam = "0.7"
env_logger = "*"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.4"
futures = "0.3"
